# tachyon

./: README.md  index.html  package-lock.json  package.json
.claude/workflows/: tachyon-nl-to-commandt-all-files-modi.js
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-07-18-rust-frontend-design.md
evals/: cases.json  danger.mjs  run.mjs
src/: main.ts  styles.css  vim.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs
ui/: Cargo.toml  Dioxus.toml  build-web.sh
ui/assets/: main.css
ui/src/: ai_bar.rs  app.rs  blocks.rs  bridge.rs  main.rs  palette.rs  settings.rs  status.rs  terminal.rs  theme.rs  vim.rs
