[package]
name = "tachyon-ui"
version = "0.1.5"
edition = "2021"

# Standalone crate — deliberately NOT part of the src-tauri workspace.
[workspace]

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
    "CssStyleDeclaration",
    "Storage",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "ClipboardEvent",
    "DataTransfer",
    "Event",
    "EventTarget",
    "ResizeObserver",
    "ResizeObserverEntry",
]

[profile.release]
opt-level = "s"
lto = true
